<resources>
    <string name="app_name">Trilly</string>
    <string name="APPLICATION_ID" translatable="false">5k7poaTQLaV7KvDyKvNTdQ2hDlvENDrPIj0RxsG0</string>
    <string name="CLIENT_KEY" translatable="false">biMQN5CkZErO1KxUl6Bv41T8q88Rrf8rv45nXmKd</string>
    <string name="SERVER_URI" translatable="false">http://trilly-parse.herokuapp.com/parse</string>
    <string name="FB_APP_ID" translatable="false">532505416917576</string>
    <string-array name="my_facebook_permissions">
        <item>public_profile</item>
        <item>user_friends</item>
    </string-array>

    <!-- VISTA LOGIN-->
    <string name="login_hashtag">#yoHagoLaDiferencia</string>
    <string name="login_terminos">Al continuar aceptarás nuestros Términos de Servicio y Políticas de Privacidad</string>
    <string name="login_error_red">Debes estar conectado a Internet.</string>

    <!-- VISTA MAIN-->
    <string name="main_saludo">¡Hola %s!</string>
    <string name="main_gas_dinamico">%.1f Galones de</string>
    <string name="main_gas_estatico">gasolina ahorrados</string>
    <string name="main_arboles_dinamico">%.0f Árboles</string>
    <string name="main_arboles_estatico">plantados</string>
    <string name="main_porcentaje">%.0f\%</string>
    <string name="main_boton_empezarViaje">EMPEZAR VIAJE</string>

    <!-- VISTA MENU-->
    <string name="menu_grupos">Mis grupos</string>
    <string name="menu_estadisticas">Mis estadísticas</string>
    <string name="menu_viajes">Mis viajes</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_ver_perfil">Ver Perfil</string>

    <!-- VISTA PERFIL-->
    <string name="perfil_arboles_dinamico">%.0f Árboles</string>
    <string name="perfil_arboles_estatico">sembrados</string>
    <string name="perfil_kilometros">%.2f Km recorridos</string>
    <string name="perfil_boton_verGrupos">Ver Grupos</string>

    <!-- VISTA LISTA DE GRUPOS-->
    <string name="grouplist_title">Mis Grupos</string>
    <string name="grouplist_nombre">Nombre del Grupo</string>
    <string name="grouplist_stats">Árboles sembrados: %1$.0f | Miembros: %2$.0f</string>

    <!-- VISTA GRUPO-->
    <string name="group_nombre">Nombre del Grupo</string>
    <string name="group_arboles_dinamico">%.0f Árboles</string>
    <string name="group_arboles_estatico">sembrados</string>
    <string name="group_kilometros">%.2f Km recorridos</string>
    <string name="title_activity_viaje">Viaje</string>
    <string name="group_boton_verMiembros">Ver miembros</string>
    <string name="group_boton_dejarGrupo">Dejar grupo</string>
    <string name="group_boton_joinGrupo">Unirse al grupo</string>

    <!-- VISTA VIAJE-->
    <string name="viaje_kilometros_dinamico">%.2f KM</string>
    <string name="viaje_kilometros_estatico">Recorridos</string>
    <string name="viaje_notificacion_ongoing">Trilly va contigo en la bici.</string>
    <string name="viaje_dialogo_terminar">¿Deseas terminar el viaje?</string>

    <!-- VISTA AJUSTES-->
    <string name="ajustes_title">Ajustes</string>
    <string name="ajustes_edad_estatico">Edad</string>
    <string name="ajustes_edad_dinamico">%.0f</string>
    <string name="ajustes_altura_estatico">Altura (m)</string>
    <string name="ajustes_altura_dinamico">%.2f</string>
    <string name="ajustes_peso_estatico">Peso (kg)</string>
    <string name="ajustes_peso_dinamico">%.1f</string>
    <string name="ajustes_boton_guardar">Guardar Cambios</string>
    <string name="ajustes_boton_signout">Cerrar Sesión</string>

    <!-- VISTA ESTADISTICAS-->
    <string name="estadisticas_title">Mis estadísticas</string>
    <string name="estadisticas_gas_dinamico">%.1f Galones de</string>
    <string name="estadisticas_gas_estatico">gasolina ahorrados</string>
    <string name="estadisticas_arboles_dinamico">%.0f Árboles</string>
    <string name="estadisticas_arboles_estatico">plantados</string>
    <string name="estadisticas_calorias_dinamico">%.0f Calorías</string>
    <string name="estadisticas_calorias_estatico">quemadas</string>
    <string name="estadisticas_co2_dinamico">%.1f Kg de CO2</string>
    <string name="estadisticas_co2_estatico">ahorrados</string>
    <string name="estadisticas_bici_dinamico">%.0f Minutos</string>
    <string name="estadisticas_bici_estatico">rodando</string>
    <string name="estadisticas_km_dinamico">%.1f Km</string>
    <string name="estadisticas_km_estatico">recorridos</string>
    <string name="estadisticas_tiempo_dinamico">%.1f Horas</string>
    <string name="estadisticas_tiempo_estatico">ahorradas</string>

    <!--VISTA VIAJELIST-->
    <string name="viajelist_title">Mis viajes</string>

    <!--VISTA VIAJEDETAILS-->
    <string name="viajedetails_title_dynamic">Viaje del %s</string>
    <string name="viajedetails_calorias_dynamic">%.0f Calorías</string>
    <string name="viajedetails_calorias_static">quemadas</string>
    <string name="viajedetails_km_dynamic">%.2f Km</string>
    <string name="viajedetails_km_static">recorridos</string>
    <string name="viajedetails_duracion_dynamic">%1$dh %2$dmin %3$ds</string>
    <string name="viajedetails_duracion_static">Duración del Viaje</string>
    <string name="viajedetails_velocidad_dynamic">%.0fkm/h</string>
    <string name="viajedetails_velocidad_static">Velocidad Promedio</string>

    <!--VISTA MEMBERLIST-->
    <string name="memberlist_arboles_dynamic">%.0f Árboles</string>
    <string name="memberlist_arboles_static">Sembrados</string>
    <string name="memberlist_miembros_dynamic">%.0f Miembros</string>

    <!--EXTRA-->

    <string name="answer_positivo">Si</string>
    <string name="answer_negativo">No</string>
    <string name="loading">Cargando…</string>
    <string name="in_vehicle" translatable="false">In a vehicle</string>
    <string name="on_bicycle" translatable="false">On a bicycle</string>
    <string name="on_foot" translatable="false">On foot</string>
    <string name="running" translatable="false">Running</string>
    <string name="walking" translatable="false">Walking</string>
    <string name="still" translatable="false">Still</string>
    <string name="tilting" translatable="false">Tilting</string>
    <string name="unknown" translatable="false">Unknown activity</string>
    <string name="unidentifiable_activity" translatable="false">Unidentifiable activity: %1$d</string>

    <!--PROGRESO-->
    <string name="progressCountingKilometers">Contando Kilómetros</string>
    <string name="progressChangingWorld">Salvando el Planeta…</string>
    <string name="progressReloadingUserGroups">Buscando a tus amigos…</string>
    <string name="progressLeavingUserGroup">Consolando a tus excompañeros</string>
    <string name="progressJoiningUserGroup">Planeando fiesta de Bienvenida</string>
    <string name="progressSignOut">Cerrando Sesión</string>
    <string name="progressLocationAccuracy">Calibrando neumáticos</string>
    <string name="progressSavingUserSettings">Guardando los cambios</string>
    <string name="progressLogin">Iniciando Sesión</string>
    <string name="progressFetchingViajes">Cargando viajes</string>
    <string name="progressFetchingMembers">Cargando miembros</string>

    <!--PERMISOS-->
    <string name="permission_location">Trilly desea acceder a tu ubicación precisa.</string>
    <string name="addgroups_title">Búsqueda de Grupos</string>

</resources>
