<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grouplist_imagen_bg"
    tools:context=".GroupListActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/grouplist_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="groupListBack" />

    <TextView
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/grouplist_fab"
        android:layout_centerHorizontal="true"
        android:text="@string/grouplist_title"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/grouplist_fab"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.tresastronautas.trilly.ExtendedImageButton
            android:id="@+id/grouplist_boton_grupo_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:onClick="startGroupActivity"
            android:src="@drawable/grouplist_imagen_box_verde"
            app:layout_heightPercent="28%" />

        <TextView
            android:id="@+id/grouplist_text_nombre_grupo1"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/grouplist_boton_grupo_1"
            android:layout_centerHorizontal="true"
            android:text="@string/grouplist_nombre"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_marginTopPercent="6%" />

        <TextView
            android:id="@+id/grouplist_text_stats_grupo1"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/grouplist_text_nombre_grupo1"
            android:layout_centerHorizontal="true"
            android:text="@string/grouplist_stats"
            android:textColor="@android:color/white"
            app:layout_marginTopPercent="1%" />

        <com.tresastronautas.trilly.ExtendedImageButton
            android:id="@+id/grouplist_boton_grupo_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/grouplist_boton_grupo_1"
            android:background="@android:color/transparent"
            android:onClick="startGroupActivity"
            android:src="@drawable/grouplist_imagen_box_morada"
            app:layout_heightPercent="28%"
            app:layout_marginTopPercent="5%" />

        <TextView
            android:id="@+id/grouplist_text_nombre_grupo2"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/grouplist_boton_grupo_2"
            android:layout_centerHorizontal="true"
            android:text="@string/grouplist_nombre"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_marginTopPercent="6%" />

        <TextView
            android:id="@+id/grouplist_text_stats_grupo2"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/grouplist_text_nombre_grupo2"
            android:layout_centerHorizontal="true"
            android:text="@string/grouplist_stats"
            android:textColor="@android:color/white"
            app:layout_marginTopPercent="1%" />

        <com.tresastronautas.trilly.ExtendedImageButton
            android:id="@+id/grouplist_boton_grupo_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/grouplist_boton_grupo_2"
            android:background="@android:color/transparent"
            android:onClick="startGroupActivity"
            android:src="@drawable/grouplist_imagen_box_naranja"
            app:layout_heightPercent="28%"
            app:layout_marginTopPercent="5%" />

        <TextView
            android:id="@+id/grouplist_text_nombre_grupo3"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/grouplist_boton_grupo_3"
            android:layout_centerHorizontal="true"
            android:text="@string/grouplist_nombre"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_marginTopPercent="6%" />

        <TextView
            android:id="@+id/grouplist_text_stats_grupo3"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/grouplist_text_nombre_grupo3"
            android:layout_centerHorizontal="true"
            android:text="@string/grouplist_stats"
            android:textColor="@android:color/white"
            app:layout_marginTopPercent="1%" />

    </android.support.percent.PercentRelativeLayout>

</RelativeLayout>
